ci: add lint pipeline

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix .",
     "format": "prettier .  --write"
   },
   "repository": {
