--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -52,17 +52,17 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string', required: true }
       - { label: 'Description', name: 'description', widget: 'string', required: false }
       - { label: 'Body', name: 'body', widget: 'markdown', required: false }
-  - name: 'projects'
-    label: 'Projects'
-    label_singular: 'Project'
-    folder: 'content/projects'
+  - name: 'series'
+    label: 'Series'
+    label_singular: 'Serie'
+    folder: 'content/series'
     create: true
     format: 'frontmatter'
     slug: '{{slug}}'
-    preview_path: 'projects/{{slug}}'
+    preview_path: '/{{slug}}'
     fields:
       - {
-          label: 'Project Category',
+          label: 'Series Category',
           name: 'category',
           widget: 'select',
           default: 'animals',
