--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,19 +39,6 @@ collections:
               pattern: ['^[a-z]{2}([-])?([A-Za-z]{2})?$', 'Must match "xx" or "xx-XX" syntax (ex. "en" or "sv-SE")'],
             }
           # - { label: Site Email, name: siteemail, widget: string, required: false }
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
-    create: true
-    format: 'frontmatter'
-    slug: '{{fields.createdAt}}-{{slug}}'
-    # editor:
-    #   preview: true
-    fields:
-      - { label: 'Created Date', name: 'createdAt', widget: 'datetime', date_format: 'YYYY-MM-DD', time_format: false }
-      - { label: 'Title', name: 'title', widget: 'string', required: true }
-      - { label: 'Description', name: 'description', widget: 'string', required: false }
-      - { label: 'Body', name: 'body', widget: 'markdown', required: false }
   - name: 'series'
     label: 'Series'
     label_singular: 'Serie'
@@ -62,21 +49,54 @@ collections:
     preview_path: '/{{slug}}'
     fields:
       - {
-          label: 'Series Category',
+          label: 'Series kind',
+          name: 'kind',
+          widget: 'select',
+          default: 'serie',
+          options: [
+            { label: 'Movie', value: 'movie' }, 
+            { label: 'Serie', value: 'serie' },
+            { label: 'Anime', value: 'anime' }
+          ],
+        }
+      - {
+          label: 'Series categorie',
           name: 'category',
           widget: 'select',
+          default: 'action',
+          options: [
+            { label: 'Action', value: 'action' }, 
+            { label: 'Horror', value: 'horror' },
+            { label: 'Romance', value: 'romance' },
+            { label: 'Drama', value: 'drama' },
+            { label: 'Comedy', value: 'comdey' },
+            { label: 'Crime', value: 'crime' },
+            { label: 'Science-Fiction', value: 'science-fiction' },
+          ],
+      }
+      - {
+          label: 'Series Subcategorie',
+          name: 'sub_category',
+          widget: 'select',
           default: 'animals',
-          options: [{ label: 'Animals', value: 'animals' }, { label: 'Food', value: 'food' }],
-        }
+          options: [
+            { label: 'Action', value: 'action' }, 
+            { label: 'Horror', value: 'horror' },
+            { label: 'Romance', value: 'romance' },
+            { label: 'Drama', value: 'drama' },
+            { label: 'Comedy', value: 'comdey' },
+            { label: 'Crime', value: 'crime' },
+            { label: 'Science-Fiction', value: 'science-fiction' },
+          ],
+      }
       - { label: 'Title', name: 'title', widget: 'string', required: true }
       - { label: 'Description', name: 'description', widget: 'string', required: false }
       - { label: 'Cover Image', name: 'cover', widget: 'image', required: false, allow_multiple: false }
-      - { label: 'Content', name: 'body', widget: 'markdown', required: false }
       - {
-          label: 'Gallery',
-          name: 'gallery',
+          label: 'Seen By',
+          name: 'seen_by',
           widget: 'list',
-          required: false,
-          summary: '{{fields.image}}',
-          field: { label: 'Image', name: 'image', widget: 'image' },
+          required: true,
+          summary: '{{fields.person}}',
+          field: { label: 'Person', name: 'person', widget: 'string' },
         }
