feat: add omdb(imdb) api info

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,3 @@
-URL='https://ntn-boilerplate.netlify.app'
 # GIT_LFS_ENABLED=true
+URL='http://localhost:3000/'
+IMDB_TOKEN='' # http://www.omdbapi.com/
