--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
-site_url: https://ntn-boilerplate.netlify.app/
-logo_url: https://ntn-boilerplate.netlify.app/icon.png
+site_url: https://what-to-watch-sheepduck.netlify.app/
+logo_url: https://amsterdamduckstore.com/wp-content/uploads/2019/12/Black-Sheep-Rubber-Duck-front-Amsterdam-Duck-Store.jpg
 
 publish_mode: editorial_workflow
 backend:
